--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
