--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "dependencies": {
     "babel-preset-env": "^1.7.0",
-    "jquery": "^1.9.1",
-    "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
