--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "babel-preset-env": "^1.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "webpack": "4.19.1",
-    "webpack-cli": "^3.1.2"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
